[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/gui/start_screen.gd" type="Script" id=1]
[ext_resource path="res://Levels/Menu/Button.theme" type="Theme" id=2]
[ext_resource path="res://Levels/Menu/desktop-1920x1080.jpg.png" type="Texture" id=3]
[ext_resource path="res://Levels/Menu/title 2.png" type="Texture" id=4]
[ext_resource path="res://Music/Copyright Free Classical Music - _Ephemera_ by Scott Buckley.mp3" type="AudioStream" id=5]
[ext_resource path="res://Misc/Black.jpg" type="Texture" id=6]
[ext_resource path="res://src/gui/settings_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Misc/world_environment.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/gui/fps_label.gd" type="Script" id=10]

[sub_resource type="Animation" id=5]
resource_name = "Finish"
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SettingsMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SettingsMenu:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Back:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SettingsMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Quit"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Start"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
level = "res://src/world/game.tscn"

[node name="Desktop-1920X1080jpg" type="Sprite" parent="."]
position = Vector2( 961.5, 540 )
scale = Vector2( 1.00156, 1.02662 )
texture = ExtResource( 3 )

[node name="Title2" type="Sprite" parent="."]
position = Vector2( 960, 605 )
texture = ExtResource( 4 )

[node name="MainMenuAnim" type="AnimationPlayer" parent="."]
anims/Finish = SubResource( 5 )
anims/RESET = SubResource( 4 )
anims/Start = SubResource( 3 )

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartGameBtn" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -222.0
margin_top = -312.0
margin_right = 666.0
margin_bottom = -202.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Start New Game"
flat = true

[node name="LoadGameBtn" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -154.0
margin_top = -246.0
margin_right = 461.0
margin_bottom = -136.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Load Game"
flat = true

[node name="SettingsBtn" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -195.0
margin_top = -184.0
margin_right = 587.0
margin_bottom = -74.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Options Menu"
flat = true

[node name="ExitBtn" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -222.0
margin_top = -120.0
margin_right = 667.0
margin_bottom = -10.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Quit to Desktop"
flat = true

[node name="SettingsMenu" parent="." instance=ExtResource( 7 )]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="Back" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = 52.0
margin_right = 755.0
margin_bottom = 143.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Back to main menu"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="QuitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Black" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 972, 544 )
scale = Vector2( 6.48, 6.47619 )
texture = ExtResource( 6 )

[node name="StartAnim" type="AnimationPlayer" parent="Black"]
reset_on_save = false
anims/Quit = SubResource( 6 )
anims/RESET = SubResource( 2 )
anims/Start = SubResource( 1 )

[node name="FpsLabel" type="Label" parent="."]
visible = false
margin_right = 280.0
margin_bottom = 85.0
rect_scale = Vector2( 0.2, 0.2 )
theme = ExtResource( 2 )
text = "FPS: 60"
script = ExtResource( 10 )

[node name="Version" type="Label" parent="."]
margin_left = 1699.0
margin_top = 5.0
margin_right = 2783.0
margin_bottom = 109.0
rect_scale = Vector2( 0.2, 0.2 )
theme = ExtResource( 2 )
text = "Version 0.0.2.3 alpha"
align = 2

[node name="WorldEnvironment" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="MainMenu/StartGameBtn" to="." method="_on_StartGameBtn_pressed"]
[connection signal="pressed" from="MainMenu/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="MainMenu/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="QuitTimer" to="." method="_on_QuitTimer_timeout"]
